--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@ color: white;
 <a href="https://instagram.com/itsjsdvt2980">Instagram</a>
 </div>
 
-<h5>Website version: Version 1.03.0 [BETA] Last updated: August 19, 2023</h5>
+<h5>Website version: Version 1.03.0 Patch 1 Last updated: August 30, 2023</h5>
 
 </body>
 </html>
