--- a/index.html
+++ b/index.html
@@ -51,10 +51,11 @@ color: white;
 <div>
 <a href="https://www.youtube.com/@OfficialJSDVT/">YouTube</a>
 <a href="https://discord.com/invite/gaXkk47JHq">Discord</a>
+<a href="https://twitter.com/OfficialJSDVT">Twitter</a>
 <a href="https://instagram.com/itsjsdvt2980">Instagram</a>
 </div>
 
-<h5>Website version: Version 1.03.0 Patch 1 Last updated: August 30, 2023</h5>
+<h5>Website version: Version 1.03.0 Patch 1</h5>
 
 </body>
 </html>
